@@ -1,3 +1,9 @@
+2007-09-11  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/scripts/burn-in-anim.scm
+	* plug-ins/script-fu/scripts/coffee.scm: removed newlines from
+	translatable strings. Fixes bug #475553.
+
 2007-09-10  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/lens.c: applied patch from Aurimas Juška which
